Modernize logging and mail sync safety